Working on frontend

--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -22,7 +22,19 @@ spring:
               uri: http://localhost:8030
               predicates:
                   - Path=/video/**
-
+          global cors:
+            cors-configurations:
+              '[/**]':
+                allowedOrigins:
+                  - "http://localhost:5173"
+                allowedMethods:
+                  - GET
+                  - POST
+                  - PUT
+                  - DELETE
+                  - OPTIONS
+                allowedHeaders: "*"
+                allowCredentials: true
 
   main:
     web-application-type: REACTIVE
