--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "hls.js": "^1.6.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17",
-    "zod": "^4.1.12"
+    "video.js": "^7.21.7",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
